rancher/overlays/dev/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rancher.audryus.arpa`)
      services:
        - name: rancher
          port: 443
          scheme: https
  tls:
    secretName: tls-rancher
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-http
  namespace: cattle-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`rancher.audryus.arpa`)
      priority: 10
      services:
        - name: rancher
          port: 80
          scheme: http
      middlewares:
        - name: redirecttohttps
